# Chess-Engine

./: CMakeLists.txt  SANToUCIConverter.py  bishop_magics.txt  bishop_shifts.txt  generateBishopMoveTable.py  generateKnightMoves.py  generateRookMoveTable.py  magics.txt  shifts.txt
Enums/: Color.h  Piece.h
include/: Board.h  BoardManager.h  DebugUtils.h  Evaluator.h  Move.h  MoveGenerator.h  MoveParser.h  OpeningBook.h  RuleChecker.h  TranspositionTable.h  UCILogger.h  UCIManager.h  Zobrist.h  bishop_table.h  rook_table.h
src/: Board.cpp  BoardManager.cpp  DebugUtils.cpp  Evaluator.cpp  Move.cpp  MoveGenerator.cpp  MoveParser.cpp  OpeningBook.cpp  RuleChecker.cpp  TranspositionTable.cpp  UCILogger.cpp  UCIManager.cpp  Zobrist.cpp  bishop_table.cpp  main.cpp  rook_table.cpp
